--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
     </head>
     <body>
         <header>
-            <h1>Eliott</h1>
+            <h1>Eliott Porcher</h1>
             <p>Étudiant / Passionné de nouvelles technologies</p>
         </header>
 
         <main>
+            <h2>À propos de moi :</h2>
             <section id="a-propos">
-                <h2>À propos de moi</h2>
                 <img
-                src="Moi.png"
-                alt="Une photo de moi"
+                src="rick roll.jpg"
+                alt="Une photo de moi "
                 width="200"
                 />
                 <p>
-                Bonjour ! Je suis un élève de seconde passionné par
-                l'informatique et le design. Je suis au lycée Marcel Gambier de Lisieux,
-                je fais du tennis de table, du violon et de la guitare.
+                Bonjour ! Je suis Eliott, un élève de seconde passionné par
+                l'informatique. Je suis au lycée Marcel Gambier de Lisieux,
+                je fais du tennis de table, du violon et de la guitare. 
+                Je joue au échecs (600 élos c'est un peu guez). 
+                J'aime le fromage et les canards, je les adore vraiment beaucoup.
                 </p>
             </section>
             <section id="projets">
