--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 l'informatique. Je suis au lycée Marcel Gambier de Lisieux,
                 je fais du tennis de table, du violon et de la guitare. 
                 Je joue au échecs (600 élos c'est un peu guez). 
-                J'aime le fromage et les canards, je les adore vraiment beaucoup.
+                J'aime le fromage et les canards, je les adore vraiment
                 </p>
             </section>
             <section id="projets">
