--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 l'informatique. Je suis au lycée Marcel Gambier de Lisieux,
                 je fais du tennis de table, du violon et de la guitare. 
                 Je joue au échecs (600 élos c'est un peu guez). 
-                J'aime le fromage et les canards, je les adore vraiment beaucoup. <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Clique</a>
+                J'aime le fromage et les canards, je les adore vraiment beaucoup.
+                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"target="_blank">Clique</a>
                 </p>
             </section>
             <section id="projets">
